opt(core):移植26.1优化内容后的补充
(cherry picked from commit e1e1158ae4775b101c67b94083f9be91c6df9d71)